OPTIMIZE task-validator (java app) service build image size