@@ -78,3 +78,42 @@ platform-task-gateway:latest      b12c444cc387      194MB     48.5MB   U
 ```
 
 Gateway image size reduced from **291MB** to **194MB** after bundling.
+
+## Validator Service
+
+The validator is a Spring Boot Java service. The image size was mostly from the Java runtime and Spring/Kafka dependencies.
+
+### Optimization
+
+Switched from the full Temurin JRE runtime image:
+
+```dockerfile
+FROM eclipse-temurin:21-jre-alpine
+```
+
+to Alpine with a custom Java runtime built using `jlink`:
+
+```dockerfile
+FROM eclipse-temurin:21-jdk-alpine AS runtime
+RUN jlink \
+    --add-modules java.base,java.desktop,java.instrument,java.logging,java.management,java.naming,java.net.http,java.security.jgss,java.sql,java.xml,jdk.crypto.ec,jdk.management,jdk.unsupported \
+    --strip-debug \
+    --no-header-files \
+    --no-man-pages \
+    --compress=2 \
+    --output /opt/java-runtime
+
+FROM alpine:3.20
+COPY --from=runtime /opt/java-runtime /opt/java-runtime
+```
+
+Also added `.dockerignore` to reduce build context.
+
+### Result
+
+```text
+platform-task-validator:latest       a566d57dd745      375MB      117MB   U
+platform-task-validator:jlink-test   738d26d36c12      202MB       86MB
+```
+
+Validator image size reduced from **375MB** to **202MB** with the custom `jlink` runtime.
